--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/node-schedule": "^2.1.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
+    "node-schedule": "^2.1.1",
     "prisma": "^5.5.2",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
